# chrome-demo

./: Cargo.toml  Dockerfile  build.yaml  readme.md
.github/workflows/: docker-publish.yml
src/: browser.rs  browser_actor.rs  logging.rs  main.rs  types.rs  websocket.rs
static/: index.html  script.js
