[package]
name = "chrome-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.0"
actix-web = "4.0.0-beta.10"
actix-web-actors = "4.0.0-beta.7"
headless_chrome = "1.0.8"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
actix-files = "0.6.0-beta.8"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
