[package]
name = "chrome-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# headless_chrome = "1.0.8"
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.70"
axum = { version = "0.7.3", features = ["ws"] }
clap = { version = "4.4.12", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
fantoccini = "0.19.3"
